# educational-bsod-experiment

./: .gitignore  CMakeLists.txt  README.md  RaiseHardError.h  main.c  main.cpp
.github/workflows/: windows.yml
include/: raise_hard_error.hpp
src/: main.cpp
